# Raspberrypi_OpenCV_fatigue_test

./: CMakeLists.txt  fatigue_detector.cpp  fatigue_detector.h  main.cpp  window.cpp  window.h
libcam2opencv/: CMakeLists.txt
